# cfony-tests

./: .travis.yml  CMakeLists.txt  Makefile  README.md  main.cpp  server
src/Core/Requests/: Request.cpp  RequestBuilder.cpp
src/Core/Responses/: Response.cpp  Response.h  ResponseBuilder.cpp  ResponseBuilder.h
src/Core/Routing/: Request.h  RequestBuilder.h  Route.cpp  RouteBuilder.cpp  RouteBuilder.h
src/Entity/: User.cpp  User.h
src/Services/: Faker.cpp  Faker.h
tests/: CMakeLists.txt
tests/Services/: Faker.cpp
